# wikipedia-parser

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yaml
src/wikimedia_parser/: __init__.py  enums.py  parser.py  types.py
tests/: test_wikimedia_types.py
