[project]
name = "wikipedia-parser"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "numpy>=2.3.3",
    "pandas>=2.3.3",
]

[dependency-groups]
dev = [
    "notebook>=7.4.7",
    "ruff>=0.14.0",
]
tests = [
    "pytest>=8.4.2",
]


[tool.ruff]
exclude = [
    "__init__.py"
]
line-length = 120
indent-width = 4

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = false