[project]
name = "wikipedia-parser"
version = "1.0.0"
description = "Wikipedia OpenData parsers"
requires-python = ">=3.12"
authors = [{ name = "Anna Loginova" }]
license = { text = "MIT" }
dependencies = [
    "httpx>=0.28.1",
    "numpy>=2.3.3",
    "pandas>=2.3.3",
]

[dependency-groups]
dev = [
    "notebook>=7.4.7",
    "ruff>=0.14.0",
]
tests = [
    "pytest>=8.4.2",
]


[tool.ruff]
exclude = [
    "__init__.py"
]
line-length = 120
indent-width = 4

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = false